@@ -217,6 +217,7 @@ BFD_NEED_DECLARATION(strstr)
 BFD_NEED_DECLARATION(sbrk)
 BFD_NEED_DECLARATION(getenv)
 BFD_NEED_DECLARATION(environ)
+AC_CHECK_DECLS(getc_unlocked)
 
 BFD_BINARY_FOPEN
 
